--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.2s">
 							<div class="inner">
-								<img class="svg" src="img/svg/ai.svg" alt="" />
+								<img class="svg" src="img/svg/seo.svg" alt="" />
 								<h3>SEO - Search Engoine Optimisation</h3>
 								<p>Good Things Take Time. I am currently working on my SEO Skills.</p>
 							</div>
