--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">
 							<div class="inner">
-								<img class="svg" src="img/svg/telegram.svg" alt="" />
+								<img class="svg" src="img/svg/brand-identity.svg" alt="" />
 								<h3>Brand Identity</h3>
 								<p> A website will  help you build your Brand and Brand Identity for your Business...</p>
 							</div>
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s">
 							<div class="inner">
-								<img class="svg" src="img/svg/photoshop.svg" alt="" />
+								<img class="svg" src="img/svg/smm.svg" alt="" />
 								<h3>Social Media Marketing </h3>
 								<p>Get more Customers by using Social Media Platforms where people are spending their most of time. I'll help you to achieve this.</p>
 							</div>
@@ -264,7 +264,7 @@
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">
 							<div class="inner">
-								<img class="svg" src="img/svg/share.svg" alt="" />
+								<img class="svg" src="img/svg/accounting.svg" alt="" />
 								<h3>Accounting</h3>
 								<p>If you dont want a website you can hire me for your Accounting work. I have a good command over accounting principles From initial Entries upto Internal-AUDIT. I have got you Covered</p>
 							</div>
