--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 						</li>
 						<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">
 							<div class="inner">
-								<img class="svg" src="img/svg/accounting.svg" alt="" />
+								<img class="svg" src="img/svg/accouting.svg" alt="" />
 								<h3>Accounting</h3>
 								<p>If you dont want a website you can hire me for your Accounting work. I have a good command over accounting principles From initial Entries upto Internal-AUDIT. I have got you Covered</p>
 							</div>
