--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		</div>
 		<div class="content">
 			<div class="image_wrap">
-				<div class="main" data-img-url="img/about/1.jpeg"></div>
+				<div class="main" data-img-url="img/about/profile-1.jpg"></div>
 			</div>
 			<div class="name_holder">
 				<h3>Jaikishan<span style=" padding-left: 25px;	">Jeswani</span></h3>
