--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 					<div class="about_image_wrap parallax" data-relative-input="true">
 						<div class="image layer" data-depth="0.1">
 							<img src="img/ratios/550x650.jpg" alt="" />
-							<div class="inner" data-img-url="img/about/1.jpg"></div>
+							<div class="inner" data-img-url="img/Profile-2.jpg"></div>
 						</div>
 						<div class="border layer" data-depth="0.2">
 							<img src="img/ratios/550x650.jpg" alt="" />
