--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 			<div class="container">
 				<div class="arlo_tm_main_title">
 					<span>News</span>
-					<h3>Latest News</h3>
+					<h3>Blog</h3>
 				</div>
 				<div class="news_list">
 					<ul>
